add doc for student structure

--- a/docs/introduction/1.main.md
+++ b/docs/introduction/1.main.md
@@ -1,6 +1,6 @@
 #Введение
 
-Сервер Mobile VyatSU построен в формате API
+Сервер Mobile VyatSU реализует интерфейс API
 
 API (application programming interface) — это посредник между разработчиком приложений и какой-либо средой, с которой это приложение должно взаимодействовать. API упрощает создание кода, поскольку предоставляет набор готовых классов, функций или структур для работы с имеющимися данными.
 
