documentation bug fix

--- a/docs/introduction/3.structures.md
+++ b/docs/introduction/3.structures.md
@@ -1,15 +1,19 @@
-#Основные структуры
-В данном разделе представленно описание основных структур
+# Основные структуры
+В данном разделе представленно описание основных структур:
+- Student
+- Teacher
+- Group
+- Schedule
 
-##Student
+## Student
 Данная структура описывает пользователя, который является студентом. Данная сущность может состоять в учебной группе и иметь определенные права доступа
 
 Возможности студента:
-- Получать расписание любой учебной группы
+- Получать расписание
 - Читать и писать сообщения, прикрепленные к учебным парам
 - менять учебную группу
 
-###Структура Student
+### Структура Student
 
 Элемент  |  Тип  | Значение
 --|---|--
