add autogenerated documentation

--- a/docs/1.introduction/3.structures.md
+++ b/docs/1.introduction/3.structures.md
@@ -4,6 +4,7 @@
 - Teacher
 - Group
 - Schedule
+- Announcement
 
 ## Student
 Данная структура описывает пользователя, который является студентом. Данная сущность может состоять в учебной группе и иметь определенные права доступа
